@@ -212,11 +212,6 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 					<br /><?php echo _e('Note : The upload limit on your server is ','nggallery') . "<strong>" . ini_get('upload_max_filesize') . "Byte</strong>\n"; ?>
 					<br /><?php if ( (IS_WPMU) && wpmu_enable_function('wpmuQuotaCheck') ) display_space_usage(); ?></td> 
 				</tr> 
-				<tr>
-					<th><?php _e('Add Metadata :', 'nggallery') ;?></th>
-					<td><input type="checkbox" name="addmetadata" value="1" checked="checked" />
-					<?php _e('Import EXIF, IPTC or XMP data (if available)', 'nggallery') ;?></td>
-				</tr>
 				</table>
 				<div class="submit"> <input type="submit" name= "zipupload" value="<?php _e('Start upload', 'nggallery') ;?>"/></div>
 			</form>
@@ -234,11 +229,6 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 					<td><input type="text" size="35" name="galleryfolder" value="<?php echo$defaultpath; ?>" /><br />
 					<?php _e('Import a folder with all images.', 'nggallery') ;?>
 					<?php if (SAFE_MODE) {?><br /><?php _e(' Please note : For safe-mode = ON you need to add the subfolder thumbs manually', 'nggallery') ;?><?php }; ?></td> 
-				</tr>
-				<tr>
-					<th><?php _e('Add Metadata :', 'nggallery') ;?></th>
-					<td><input type="checkbox" name="addmetadata" value="1" checked="checked" />
-					<?php _e('Import EXIF, IPTC or XMP data (if available)', 'nggallery') ;?></td>
 				</tr>
 				</table>
 				<div class="submit"> <input type="submit" name= "importfolder" value="<?php _e('Import folder', 'nggallery') ;?>"/></div>
@@ -271,11 +261,6 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 					<br /><?php echo _e('Note : The upload limit on your server is ','nggallery') . "<strong>" . ini_get('upload_max_filesize') . "Byte</strong>\n"; ?>
 					<br /><?php if ((IS_WPMU) && wpmu_enable_function('wpmuQuotaCheck')) display_space_usage(); ?></td> 
 				</tr> 
-				<tr>
-					<th><?php _e('Add Metadata :', 'nggallery') ;?></th>
-					<td><input type="checkbox" name="addmetadata" value="1" checked="checked" />
-					<?php _e('Import EXIF, IPTC or XMP data (if available)', 'nggallery') ;?></td>
-				</tr>
 				</table>
 				<div class="submit">
 					<?php if ($ngg->options['swfUpload']) { ?>
